Projecto working, providing outputs and compiling in windows